# openclaw_intent_benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  Template.md  curl_openclaw.sh  environment.json  execute.sh  oracle.py  oracle_common.py  prepare.sh  pyproject.toml  run_case.sh  run_case_origin.sh
doc/: oracle_common.md
docker/: openclaw-init  openclaw-init-proxy  openclaw-init-softcoding
final_results/: METRICS_SUMMARY_email_reply_matrix_4models_2026-04-19_20.md  METRICS_SUMMARY_full98_by_category_4models_2026-04-19_20.md  full98_anomaly_score_full_baseline_vs_dims.csv  full98_by_ablation_dimension_model.csv  full98_by_ablation_dimension_overall.csv  full98_by_category_model_cost_and_pass.csv  full98_model_batch_rollup.csv  full98_per_case_per_model.csv  pass_metrics_bench_anthropic_claude-sonnet-4_6.md  pass_metrics_bench_moonshotai_kimi-k2_5.md  pass_metrics_bench_openai_gpt-5_1.md  pass_metrics_bench_openai_gpt-5_4-mini.md  pass_metrics_bench_openai_gpt-5_4.md  pass_metrics_email_reply_openai_gpt-5_1.md  pass_metrics_email_reply_openai_gpt-5_4.md  summary_bench_passk_anthropic_claude-sonnet-4_6.json  summary_bench_passk_moonshotai_kimi-k2_5.json  summary_bench_passk_openai_gpt-5_1.json  summary_bench_passk_openai_gpt-5_4-mini.json  summary_bench_passk_openai_gpt-5_4.json  summary_email_reply_passk_moonshotai_kimi-k2_5.json  summary_email_reply_passk_openai_gpt-5_4-mini.json
litellm-ofox-proxy/: config.yaml  inject_thinking_params.py  start_proxy.sh  test-litellm.sh
results/: METRICS_SINGLE_2026-04-28_bench_v2_all_moonshotai_kimi-k2_5.md  (+42 more)
(+37115 files in other folders)
