[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-risk-benchmark"
version = "0.1.0"
description = "Repo-backed benchmark harness for agent risk evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
  "types-PyYAML",
]

[project.scripts]
agent-risk-benchmark = "agent_risk_benchmark.runner.run_episode:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_risk_benchmark*", "runner"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
